# candle_wax

./: Cargo.toml  README.md
backends/: Cargo.toml
backends/src/: context.rs  language.rs  lib.rs  node_executor.rs
backends/src/cpu/: backend.rs  context.rs  cost.rs  expression_builder.rs  language.rs  mod.rs  node_executor.rs
backends/src/cpu/ops/: divide.rs  exp.rs  matmul.rs  mod.rs  multiply.rs  relu.rs  sum.rs
composite_ops/: Cargo.toml
composite_ops/src/: lazy_tensor.rs  lib.rs
composite_ops/src/ops/: matmul.rs  mod.rs  softmax.rs
core/: Cargo.toml
core/src/: layout.rs  lib.rs  numeric.rs  storage.rs  tensor.rs
core/src/backends/: broadcast.rs  map.rs  mod.rs  reduce.rs
core/src/backends/cpu/: backend.rs  dtype.rs  mod.rs  storage.rs
core/src/backends/metal/: dtype.rs  mod.rs  storage.rs
core/src/backends/op_traits/: map.rs  mod.rs  reduce.rs
core/src/backends/ops/: divide.rs  exp.rs  mod.rs  multiply.rs  relu.rs  sum.rs
core/src/backends/storage/: mod.rs
core/src/op_traits/: mod.rs  relu.rs  sum.rs
core/src/storage/: mod.rs
core/src/storage/cpu/: mod.rs  storage.rs
core/src/storage/metal/: mod.rs  storage.rs
core/src/tensor/: lazy_tensor.rs  mod.rs
core/src/tensor/op_traits/: map.rs  mod.rs  (+1 more)
examples/: Cargo.toml
examples/examples/basic/: main.rs
examples/examples/new-backend/: main.rs
examples/examples/new-storage/: main.rs
macros/: Cargo.toml
macros/src/: backend.rs  lib.rs  storage.rs  tensor.rs
storage/: Cargo.toml
storage/src/cpu/: dtype.rs  mod.rs  storage.rs
tests/: Cargo.toml
tests/src/: lib.rs
(+16 files in other folders)
