[workspace]
members = ["backends", "core", "examples", "macros", "storage", "tests"]
resolver = "2"

[workspace.package]
name = "candle-wax"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
macros = { path = "macros" }
core = { path = "core" }
storage = {path = "storage"}
backends = { path = "backends" }