[workspace]
members = ["backends", "core", "examples", "macros", "composite_ops", "storage", "tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
regex = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
egg = "0.10.0"
macros = { path = "macros" }
core = { path = "core" }
storage = {path = "storage"}
backends = { path = "backends" }
composite_ops = {path = "composite_ops" }
